test/corpus/casts.txt
================================================================================
safe cast
================================================================================
obj as? String
--------------------------------------------------------------------------------
(source_file
  (as_expression
    (identifier)
    (user_type
      (type_identifier))))

================================================================================
unsafe cast
================================================================================
obj as String
--------------------------------------------------------------------------------
(source_file
  (as_expression
    (identifier)
    (user_type
      (type_identifier))))

================================================================================
is type check
================================================================================
obj is String
--------------------------------------------------------------------------------
(source_file
  (check_expression
    (identifier)
    (user_type
      (type_identifier))))

================================================================================
not is type check
================================================================================
obj !is String
--------------------------------------------------------------------------------
(source_file
  (check_expression
    (identifier)
    (user_type
      (type_identifier))))

================================================================================
smart cast in if
================================================================================
if (obj is String) {
    println(obj.length)
}
--------------------------------------------------------------------------------
(source_file
  (if_expression
    (check_expression
      (identifier)
      (user_type
        (type_identifier)))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (navigation_expression
                  (identifier)
                  (navigation_suffix
                    (identifier)))))))))))

================================================================================
cast with generics
================================================================================
list as List<String>
--------------------------------------------------------------------------------
(source_file
  (as_expression
    (identifier)
    (user_type
      (type_identifier)
      (type_arguments
        (type_projection
          (user_type
            (type_identifier)))))))

================================================================================
cast to nullable type
================================================================================
obj as String?
--------------------------------------------------------------------------------
(source_file
  (as_expression
    (identifier)
    (nullable_type
      (user_type
        (type_identifier)))))

================================================================================
parenthesized cast
================================================================================
(obj as String).length
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (parenthesized_expression
      (as_expression
        (identifier)
        (user_type
          (type_identifier))))
    (navigation_suffix
      (identifier))))

================================================================================
cast in expression
================================================================================
val result = obj as Int + 5
--------------------------------------------------------------------------------
(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (identifier))
    (additive_expression
      (as_expression
        (identifier)
        (user_type
          (type_identifier)))
      (decimal_integer_literal))))

================================================================================
nested type check
================================================================================
obj is List<*>
--------------------------------------------------------------------------------
(source_file
  (check_expression
    (identifier)
    (user_type
      (type_identifier)
      (type_arguments
        (type_projection)))))
